# ardkit-py

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml  release_pypi.yaml
adapters/: index.html
concepts/: index.html
docs/: adapters.md  concepts.md  index.md  quickstart.md  registry.md
examples/fastapi_min/: README.md  app.py
quickstart/: index.html
registry/: index.html
scripts/: vendor_schemas.py
search/: search_index.json
src/ardkit/: __init__.py  catalog.py  discovery.py  errors.py  media_types.py  models.py  validation.py
src/ardkit/adapters/: __init__.py  ag2.py  fastmcp.py  mcp_sdk.py
src/ardkit/integrations/: __init__.py  fastapi.py
src/ardkit/registry/: __init__.py  fastapi.py  memory.py  models.py  provider.py  service.py
src/ardkit/schemas/: SOURCE.md
tests/: test_adapters.py  test_catalog.py  test_discovery.py  test_fastapi.py  test_models.py  test_registry.py  test_validation.py
